[package]
name = "bf-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.112"
serde_json = "1.0.55"
serde_derive = "1.0.112"
url = "2.1.1"
hyper = "0.13.6"